# wool

./: .secrets.baseline  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: auto-format.yml  wool.yml
wool/: comment_pr.py
